--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,18 @@ Global Styles
   --clr-primary: #d23669;
 }
 
+.dark-theme {
+  --clr-bcg: #282c35;
+  --clr-font: #fff;
+  --clr-primary: #ffa7c4;
+}
+
+.light-theme {
+  --clr-bcg: #fff;
+  --clr-font: #282c35;
+  --clr-primary: #d23669;
+}
+
 *,
 ::after,
 ::before {
@@ -48,7 +60,7 @@ Navbar
 }
 
 .articles {
-  padding: 5rem 0;
+  padding: 2rem 0 5rem 0;
   width: 90vw;
   max-width: 600px;
   margin: 0 auto;
